--- a/dashboard/core/templates/index.html
+++ b/dashboard/core/templates/index.html
@@ -1,72 +1,23 @@
 {% extends "board.html" %}
-
+{% load core_extras %}
 
 {% block container %}
 <!-- Icon Cards-->
     <div class="row">
       <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-success o-hidden h-100">
-          <div class="card-body">
-            <div class="card-body-icon">
-              <i class="fas fa-fw fa-meteor"></i>
-            </div>
-            <div class="mr-5"><b>{{ n_nodes }}</b> Nodes</div>
-          </div>
-          <a class="card-footer text-white clearfix small z-1" href="#">
-            <span class="float-left">View Details</span>
-            <span class="float-right">
-              <i class="fas fa-angle-right"></i>
-            </span>
-          </a>
-        </div>
+        <form method="post" action="/index/">
+          {% csrf_token %}
+          <button class="btn btn-primary btn-block" type="submit">Pull</button>
+        </form>
       </div>
       <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-warning o-hidden h-100">
-          <div class="card-body">
-            <div class="card-body-icon">
-              <i class="fas fa-fw fa-cube"></i>
-            </div>
-            <div class="mr-5"><b>{{ n_blocks }}</b> Blocks</div>
-          </div>
-          <a class="card-footer text-white clearfix small z-1" href="#">
-            <span class="float-left">View Details</span>
-            <span class="float-right">
-              <i class="fas fa-angle-right"></i>
-            </span>
-          </a>
-        </div>
+
       </div>
       <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-primary o-hidden h-100">
-          <div class="card-body">
-            <div class="card-body-icon">
-              <i class="fas fa-fw fa-list"></i>
-            </div>
-            <div class="mr-5"><b>{{ n_tx }}</b> Transactions</div>
-          </div>
-          <a class="card-footer text-white clearfix small z-1" href="#">
-            <span class="float-left">View Details</span>
-            <span class="float-right">
-              <i class="fas fa-angle-right"></i>
-            </span>
-          </a>
-        </div>
+
       </div>
       <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-danger o-hidden h-100">
-          <div class="card-body">
-            <div class="card-body-icon">
-              <i class="fas fa-fw fa-comments"></i>
-            </div>
-            <div class="mr-5"><b>{{ n_msg }}</b> Messages</div>
-          </div>
-          <a class="card-footer text-white clearfix small z-1" href="#">
-            <span class="float-left">View Details</span>
-            <span class="float-right">
-              <i class="fas fa-angle-right"></i>
-            </span>
-          </a>
-        </div>
+
       </div>
     </div>
 
@@ -78,39 +29,39 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="table table-bordered" id="block_dataTable" width="100%" cellspacing="0">
+          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead>
               <tr>
-                <th>Block Name</th>
-                <th>Protocol ID</th>
-                <th>Block Hash</th>
-                <th>Index</th>
-                <th>Prev Block Hash</th>
-                <th>Nb Tx</th>
-                <th>Nb Msg</th>
+                <th>Name</th>
+                <th>Sector</th>
+                <th>Force N-1</th>
+                <th>Force N</th>
+                <th>Phase N-1</th>
+                <th>Phase N</th>
+                <th>Graph</th>
               </tr>
             </thead>
             <tfoot>
               <tr>
-                <th>Block Name</th>
-                <th>Protocol ID</th>
-                <th>Block Hash</th>
-                <th>Index</th>
-                <th>Prev Block Hash</th>
-                <th>Nb Tx</th>
-                <th>Nb Msg</th>
+                <th>Name</th>
+                <th>Sector</th>
+                <th>Force N-1</th>
+                <th>Force N</th>
+                <th>Phase N-1</th>
+                <th>Phase N</th>
+                <th>Graph</th>
               </tr>
             </tfoot>
             <tbody>
-            {% for oblock in blocks %}
+            {% for e in companies %}
               <tr>
-                <td><a href="/timeline/block/{{oblock.id}}">{{ oblock.name }}</a></td>
-                <td>{{ oblock.instance_id }}</td>
-                <td>{{ oblock.messages.all.first.value|truncatechars:30 }}</td>
-                <td>{{ oblock.headers.all.first.index }}</td>
-                <td>{{ oblock.headers.all.first.prev_block_hash|truncatechars:30 }}</td>
-                <td>{{ oblock.transactions.count }}</td>
-                <td>{{ oblock.messages.count }}</td>
+                <td><a href="/hello/company/{{e.id}}">{{ e.name }}</a></td>
+                <td>{{ e.sector }}</td>
+                <td>{{ e.indicators.all|antepenultimate:"force" }}</td>
+                <td>{{ e.indicators.all|ultimate:"force" }}</td>
+                <td>{{ e.indicators.all|antepenultimate:"phase" }}</td>
+                <td>{{ e.indicators|ultimate:"phase" }}</td>
+                <td> o </td>
               </tr>
             {% endfor %}
             </tbody>
