--- a/dashboard/core/templates/board.html
+++ b/dashboard/core/templates/board.html
@@ -119,7 +119,7 @@
         <footer class="sticky-footer">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright © Bull-Atos 2020</span>
+              <span>Copyright © Futrax <script>document.write(new Date().getFullYear())</script></span>
             </div>
           </div>
         </footer>
