--- a/dashboard/core/templates/index.html
+++ b/dashboard/core/templates/index.html
@@ -5,7 +5,7 @@
 <!-- Icon Cards-->
     <div class="row">
       <div class="col-xl-3 col-sm-6 mb-3">
-        <form method="post" action="/index/">
+        <form method="get" action="/pullasync/">
           {% csrf_token %}
           <button class="btn btn-primary btn-block" type="submit">Pull</button>
         </form>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="card-footer small text-muted">
-        Atos
+        me
       </div>
     </div>
 
