remove min js lib from project

--- a/dashboard/core/templates/board.html
+++ b/dashboard/core/templates/board.html
@@ -10,7 +10,7 @@
 
 {% block links %}
   <!-- Custom styles for this template-->
-  <link href="/static/css/sb-admin.min.css" rel="stylesheet">
+  <link href="/static/css/sb-admin.css" rel="stylesheet">
   <!-- Custom styles for this page-->
   <link href="/static/css/timeline/page.css" rel="stylesheet">
 {% endblock %}
@@ -167,7 +167,7 @@
     <script src="/static/vendor/datatables/dataTables.bootstrap4.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="/static/js/sb-admin.min.js"></script>
+    <script src="/static/js/sb-admin.js"></script>
 
     <!-- Demo scripts for this page-->
     <script src="/static/js/datatables-demo.js"></script>
