--- a/dashboard/core/templates/index.html
+++ b/dashboard/core/templates/index.html
@@ -3,49 +3,71 @@
 
 {% block container %}
 <!-- Icon Cards-->
-    <div class="row">
-      <div class="col-xl-3 col-sm-6 mb-3">
-
-      </div>
-      <div class="col-xl-3 col-sm-6 mb-3">
-
-      </div>
-      <div class="col-xl-3 col-sm-6 mb-3">
-
-      </div>
-      <div class="col-xl-3 col-sm-6 mb-3">
-
-      </div>
-    </div>
-
     <!-- DataTables For Block -->
     <div class="card mb-3">
       <div class="card-header">
         <i class="fas fa-table"></i>
         Blocks Table
       </div>
+
       <div class="card-body">
+        <!-- Filters -->
+        <div class="row">
+          <div class="col-xl-4 col-sm-6 mb-4">
+            <label class="col-sm">Filter by indice</label>
+            <div class="col-sm">
+              <select class="form-control form-control-sm" id="filter_by_indice" name="indice">
+                <option> </option>
+                {% for i in indices %}
+                  <option> {{ i }} </option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+          <div class="col-xl-4 col-sm-6 mb-4">
+            <label class="col-sm">Filter by sector</label>
+            <div class="col-sm">
+              <select class="form-control form-control-sm" id="filter_by_sector" name="sector">
+                <option> </option>
+                {% for s in sectors %}
+                  <option> {{ s }} </option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+          <div class="col-xl-4 col-sm-6 mb-4">
+            <label class="col-sm">Filter by phase</label>
+            <div class="col-sm">
+              <select class="form-control form-control-sm" id="filter_by_phase" name="phase">
+                <option> </option>
+                {% for p in phases %}
+                  <option> {{ p }} </option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <!-- Table -->
         <div class="table-responsive">
           <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead>
               <tr>
                 <th>Name</th>
+                <th>Indice</th>
                 <th>Sector</th>
-                <th>Force N-1</th>
-                <th>Force N</th>
-                <th>Phase N-1</th>
-                <th>Phase N</th>
+                <th>Force</th>
+                <th>Phase</th>
                 <th>Graph</th>
               </tr>
             </thead>
             <tfoot>
               <tr>
                 <th>Name</th>
+                <th>Indice</th>
                 <th>Sector</th>
-                <th>Force N-1</th>
-                <th>Force N</th>
-                <th>Phase N-1</th>
-                <th>Phase N</th>
+                <th>Force</th>
+                <th>Phase</th>
                 <th>Graph</th>
               </tr>
             </tfoot>
@@ -53,11 +75,10 @@
             {% for e in companies %}
               <tr>
                 <td><a href="/hello/company/{{e.id}}">{{ e.name }}</a></td>
+                <td>{{ e.indice }}</td>
                 <td>{{ e.sector }}</td>
-                <td>{{ e.indicators.all|antepenultimate:"force" }}</td>
                 <td>{{ e.indicators.all|ultimate:"force" }}</td>
-                <td>{{ e.indicators.all|antepenultimate:"phase" }}</td>
-                <td>{{ e.indicators|ultimate:"phase" }}</td>
+                <td>{{ e.indicators.all|ultimate:"phase" }}</td>
                 <td> o </td>
               </tr>
             {% endfor %}
