--- a/dashboard/core/templates/login.html
+++ b/dashboard/core/templates/login.html
@@ -1,12 +1,8 @@
-{% extends "html.html" %}
-
-
+{% extends "mainframe.html" %}
 
 {% block title %}
   Dashboard Login
 {% endblock %}
-
-
 
 {% block links %}
   <!-- Custom fonts for this template-->
@@ -14,8 +10,6 @@
   <!-- Custom styles for this template-->
   <link href="/static/css/sb-admin.css" rel="stylesheet">
 {% endblock %}
-
-
 
 {% block body %}
   <body class="bg-dark">
