--- a/dashboard/core/templates/board.html
+++ b/dashboard/core/templates/board.html
@@ -1,29 +1,36 @@
-{% extends "html.html" %}
-
-
+{% extends "mainframe.html" %}
 
 {% block title %}
   Dashboard
 {% endblock %}
 
-
-
 {% block links %}
-  <!-- Custom styles for this template-->
-  <link href="/static/css/sb-admin.css" rel="stylesheet">
-  <!-- Custom styles for this page-->
-  <link href="/static/css/timeline/page.css" rel="stylesheet">
+  <!-- Bootstrap core JavaScript-->
+  <script src="/static/vendor/jquery/jquery.min.js"></script>
+  <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Page level plugin JavaScript-->
+  <script src="/static/vendor/chart.js/Chart.min.js"></script>
+  <script src="/static/vendor/datatables/jquery.dataTables.js"></script>
+  <script src="/static/vendor/datatables/dataTables.bootstrap4.js"></script>
+
+  <!-- Custom scripts/styles for all subboards -->
+  <script src="/static/js/custom-demo.js"></script>
+  <link href="/static/css/custom-demo.css" rel="stylesheet">
+
+  <!-- Custom script/style for each board -->
+  {% block sublinks %}
+  {% endblock %}
+
 {% endblock %}
-
-
 
 {% block body %}
   <body id="page-top">
-
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
       <a class="navbar-brand mr-1" href="">Bootstrap</a>
-
       <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
       </button>
@@ -78,30 +85,32 @@
           </div>
         </li>
       </ul>
-
     </nav>
 
     <div id="wrapper">
-
       <!-- Sidebar -->
       <ul class="sidebar navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/index">
+          <a class="nav-link" href="/dashboard">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/hello">
+          <a class="nav-link" href="/graph">
             <i class="fas fa-fw fa-calculator"></i>
+            <span>Graph</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/hello">
+            <i class="fas fa-fw fa-chart-line"></i>
             <span>Hello</span></a>
         </li>
       </ul>
 
       <div id="content-wrapper">
-
+        <!-- /.container-fluid -->
         <div class="container-fluid">
-
           <!-- Breadcrumbs-->
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
@@ -112,8 +121,7 @@
 
           {% block container %}
           {% endblock %}
-          
-        <!-- /.container-fluid -->
+        </div>
 
         <!-- Sticky Footer -->
         <footer class="sticky-footer">
@@ -123,7 +131,6 @@
             </div>
           </div>
         </footer>
-
       </div>
       <!-- /.content-wrapper -->
 
@@ -153,24 +160,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Bootstrap core JavaScript-->
-    <script src="/static/vendor/jquery/jquery.min.js"></script>
-    <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Page level plugin JavaScript-->
-    <script src="/static/vendor/chart.js/Chart.min.js"></script>
-    <script src="/static/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="/static/vendor/datatables/dataTables.bootstrap4.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="/static/js/sb-admin.js"></script>
-
-    <!-- Demo scripts for this page-->
-    <script src="/static/js/datatables-demo.js"></script>
 
   </body>
 {% endblock %}
