--- a/dashboard/core/templates/hello/index.html
+++ b/dashboard/core/templates/hello/index.html
@@ -1,5 +1,9 @@
 {% extends "../board.html" %}
 
+{% block sublinks %}
+  <!-- Demo scripts for this page -->
+{% endblock %}
+
 {% load core_extras %}
 
 {% block container %}
