--- a/dashboard/core/templates/dashboard/index.html
+++ b/dashboard/core/templates/dashboard/index.html
@@ -80,9 +80,9 @@
           <tbody>
           {% for e in companies %}
             <tr>
-              <td><a href="/hello/company/{{e.id}}">{{ e.name }}</a></td>
+              <td><a href="/graph/company/{{e.id}}">{{ e.name }}</a></td>
               <td>{{ e.indice }}</td>
-              <td>{{ e.sector }}</td>
+              <td>{{ e.sector }}</td>
               <td>{{ e.indicators.all|ultimate:"force" }}</td>
               <td>{{ e.indicators.all|ultimate:"phase" }}</td>
               <td> o </td>
