--- a/dashboard/core/templates/dashboard/index.html
+++ b/dashboard/core/templates/dashboard/index.html
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="card-footer small text-muted">
-      me
+      Table with DataTables
     </div>
   </div>
 {% endblock %}
