refactor models to another

--- a/dashboard/core/templates/board.html
+++ b/dashboard/core/templates/board.html
@@ -79,14 +79,25 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/graph">
-            <i class="fas fa-fw fa-calculator"></i>
+            <i class="fas fa-fw fa-chart-line"></i>
             <span>Graph</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/stock">
+            <i class="fas fa-fw fa-bell"></i>
+            <span>Watchlist</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/employee">
+            <i class="fas fa-fw fa-user"></i>
+            <span>Employee</span></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/hello">
-            <i class="fas fa-fw fa-chart-line"></i>
+            <i class="fas fa-fw fa-paragraph"></i>
             <span>Hello</span></a>
         </li>
+
       </ul>
 
       <div id="content-wrapper">
