add selector to graph page

--- a/dashboard/core/templates/dashboard/index.html
+++ b/dashboard/core/templates/dashboard/index.html
@@ -85,7 +85,7 @@
               <td>{{ e.sector }}</td>
               <td>{{ indicators|index:e.pk|index:0 }}</td>
               <td>{{ indicators|index:e.pk|index:1 }}</td>
-              <td>{{ indicators|index:e.pk|index:2 }}</td> <!-- e.indicators.all|weinstein -->
+              <td>{{ indicators|index:e.pk|index:2 }}</td>
             </tr>
           {% endfor %}
           </tbody>
