--- a/dashboard/core/templates/stock/index.html
+++ b/dashboard/core/templates/stock/index.html
@@ -2,6 +2,7 @@
 
 {% block links %}
   <!-- Demo script/style for this page -->
+  <script src="/static/js/stock-demo.js"></script>
 {% endblock %}
 
 {% load core_extras %}
@@ -10,7 +11,7 @@
 {% block container %}
     <!-- Table -->
       <div class="table-responsive">
-        <table class="table table-bordered" id="employeeTable" width="100%" cellspacing="0">
+        <table class="table table-bordered" id="stockTable" width="100%" cellspacing="0">
           <thead>
             <tr>
               <th>Name</th>
@@ -46,17 +47,16 @@
             <tr>
               <td><a href="/graph/company/{{s.company_fk.id}}">{{ s.name }}</a></td>
               <td>{{ s.option }}</td>
-              <td>{{ s.pru }} €</td>
-              <td>{{ s.target }} €</td>
-              <td>{{ s.stop }} €</td>
-              <td>{{ s.ticker|get_price }} €</td>
-              <td>{{ s.ticker|get_pl:s.pru }} %</td>
+              <td>{{ s.pru }}€</td>
+              <td>{{ s.target }}€</td>
+              <td>{{ s.stop }}€</td>
+              <td>{{ s.ticker|get_price }}€</td>
+              <td>{{ s.ticker|get_pl:s.pru }}%</td>
               <td>{{ s.get_current_phase }}</td>
               <td>{{ s.get_weinstein }}</td>
               <td><a href="{{s.link}}" target="_blank">link</a></td>
               <td>
                   <button onClick="location.href='/stock/{{s.pk}}'" type="button" class="btn btn-primary">edit</button>
-                  /
                   <button onClick="location.href='/stock/{{s.pk}}/delete'" type="button" class="btn btn-danger">delete</button>
               </td>
             </tr>
