--- a/dashboard/core/templates/dashboard/index.html
+++ b/dashboard/core/templates/dashboard/index.html
@@ -3,97 +3,90 @@
 {% block links %}
   <!-- Demo script/style for this page-->
   <script src="/static/js/dashboard-demo.js"></script>
-{% endblock %}
+{% endblock links %}
 
 {% load core_extras %}
 
-{% block container %}
-<!-- Icon Cards-->
-  <!-- DataTables For Block -->
-  <div class="card mb-3">
-    <div class="card-header">
-      <i class="fas fa-table"></i>
-      Blocks Table
-    </div>
+{% block active_header %}
+  <a href="{% url 'dashboard' %}">Dashboard</a>
+{% endblock active_header %}
+{% block active_footer %}
+  Dashboard
+{% endblock active_footer %}
 
-    <div class="card-body">
-      <!-- Filters -->
-      <div class="row">
-        <div class="col-xl-4 col-sm-6 mb-4">
-          <label class="col-sm">Filter by indice</label>
-          <div class="col-sm">
-            <select class="form-control form-control-sm" id="filter_by_indice" name="indice">
-              <option> </option>
-              {% for i in indices %}
-                <option> {{ i }} </option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 mb-4">
-          <label class="col-sm">Filter by sector</label>
-          <div class="col-sm">
-            <select class="form-control form-control-sm" id="filter_by_sector" name="sector">
-              <option> </option>
-              {% for s in sectors %}
-                <option> {{ s }} </option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        <div class="col-xl-4 col-sm-6 mb-4">
-          <label class="col-sm">Filter by phase</label>
-          <div class="col-sm">
-            <select class="form-control form-control-sm" id="filter_by_phase" name="phase">
-              <option> </option>
-              {% for p in phases %}
-                <option> {{ p }} </option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-      </div>
-
-      <!-- Table -->
-      <div class="table-responsive">
-        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Indice</th>
-              <th>Sector</th>
-              <th>Force</th>
-              <th>Phase</th>
-              <th>Infos</th>
-            </tr>
-          </thead>
-          <tfoot>
-            <tr>
-              <th>Name</th>
-              <th>Indice</th>
-              <th>Sector</th>
-              <th>Force</th>
-              <th>Phase</th>
-              <th>Infos</th>
-            </tr>
-          </tfoot>
-          <tbody>
-          {% for e in companies %}
-            <tr>
-              <td><a href="/graph/company/{{e.id}}">{{ e.name }}</a></td>
-              <td>{{ e.indice }}</td>
-              <td>{{ e.sector }}</td>
-              <td>{{ e.get_current_force }}</td>
-              <td>{{ e.get_current_phase }}</td>
-              <td>{{ e.get_weinstein }}</td>
-            </tr>
+{% block active_container %}
+  <!-- Filters -->
+  <div class="row">
+    <div class="col-xl-4 col-sm-6 mb-4">
+      <label class="col-sm">Filter by indice</label>
+      <div class="col-sm">
+        <select class="form-control form-control-sm" id="filter_by_indice" name="indice">
+          <option> </option>
+          {% for i in indices %}
+            <option> {{ i }} </option>
           {% endfor %}
-          </tbody>
-        </table>
+        </select>
       </div>
     </div>
-    <div class="card-footer small text-muted">
-      Table with DataTables
+    <div class="col-xl-4 col-sm-6 mb-4">
+      <label class="col-sm">Filter by sector</label>
+      <div class="col-sm">
+        <select class="form-control form-control-sm" id="filter_by_sector" name="sector">
+          <option> </option>
+          {% for s in sectors %}
+            <option> {{ s }} </option>
+          {% endfor %}
+        </select>
+      </div>
+    </div>
+    <div class="col-xl-4 col-sm-6 mb-4">
+      <label class="col-sm">Filter by phase</label>
+      <div class="col-sm">
+        <select class="form-control form-control-sm" id="filter_by_phase" name="phase">
+          <option> </option>
+          {% for p in phases %}
+            <option> {{ p }} </option>
+          {% endfor %}
+        </select>
+      </div>
     </div>
   </div>
-{% endblock %}
+
+  <!-- Table -->
+  <div class="table-responsive">
+    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Indice</th>
+          <th>Sector</th>
+          <th>Force</th>
+          <th>Phase</th>
+          <th>Infos</th>
+        </tr>
+      </thead>
+      <tfoot>
+        <tr>
+          <th>Name</th>
+          <th>Indice</th>
+          <th>Sector</th>
+          <th>Force</th>
+          <th>Phase</th>
+          <th>Infos</th>
+        </tr>
+      </tfoot>
+      <tbody>
+      {% for e in companies %}
+        <tr>
+          <td><a href="/graph/company/{{e.id}}">{{ e.name }}</a></td>
+          <td>{{ e.indice }}</td>
+          <td>{{ e.sector }}</td>
+          <td>{{ e.get_current_force }}</td>
+          <td>{{ e.get_current_phase }}</td>
+          <td>{{ e.get_weinstein }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
+{% endblock active_container %}
