--- a/dashboard/core/templates/graph/selector.html
+++ b/dashboard/core/templates/graph/selector.html
@@ -2,12 +2,18 @@
 
 {% block links %}
     <!-- Demo script/style for this page -->
-
-{% endblock %}
+{% endblock links %}
 
 {% load core_extras %}
 
-{% block container %}
+{% block active_header %}
+  <a href="{% url 'graph' %}">Graph</a>
+{% endblock active_header %}
+{% block active_footer %}
+  Graph
+{% endblock active_footer %}
+
+{% block active_container %}
     <script>
         $(document).ready(function() {
         $('#company_selector select').change(function() {
@@ -28,4 +34,4 @@
         </div>
     </div>
 
-{% endblock %}
+{% endblock active_container %}
