--- a/dashboard/core/templates/login.html
+++ b/dashboard/core/templates/login.html
@@ -2,11 +2,11 @@
 
 {% block title %}
   Dashboard Login
-{% endblock %}
+{% endblock title %}
 
 {% block links %}
   <!-- Custom styles for this template-->
-{% endblock %}
+{% endblock links %}
 
 {% block body %}
   <body class="bg-dark">
@@ -55,4 +55,4 @@
     <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   </body>
-{% endblock %}
+{% endblock body %}
