--- a/dashboard/core/templates/mainframe.html
+++ b/dashboard/core/templates/mainframe.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Webtrade Dashboard">
     <meta name="author" content="Futrax">
     
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock title%}</title>
 
     <!-- All Scripts and styles -->
     <!-- https://cdnjs.com/libraries/ -->
@@ -36,10 +36,10 @@
     <script src="/static/js/custom-demo.js"></script>
     <link href="/static/css/custom-demo.css" rel="stylesheet">
     {% block links %}
-    {% endblock %}
+    {% endblock links %}
   </head>
 
   {% block body %}
-  {% endblock %}
+  {% endblock body %}
 
 </html>
