--- a/dashboard/core/templates/stock/form.html
+++ b/dashboard/core/templates/stock/form.html
@@ -2,10 +2,17 @@
 
 {% block links %}
   <!-- Demo script/style for this page -->
-{% endblock %}
+{% endblock links %}
 
 {% load core_extras %}
 {% load crispy_forms_tags %}
+
+{% block active_header %}
+  <a href="{% url 'stock' %}">Stock</a>
+{% endblock active_header %}
+{% block active_footer %}
+  Stock
+{% endblock active_footer %}
 
 {% block container %}
     <h2>Stock Creation / Edition</h2>
@@ -15,4 +22,4 @@
         <button onClick="javascript:history.go(-1);" type="button" class="btn btn-light">Back</button>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
-{% endblock %}
+{% endblock active_container %}
