--- a/dashboard/core/templates/board.html
+++ b/dashboard/core/templates/board.html
@@ -28,6 +28,8 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
             <a class="dropdown-item" href="/api/">API</a>
+            <a class="dropdown-item" href="/live/">Live</a>
+            <a class="dropdown-item" href="{% url 'scraper' %}">Scraper</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
           </div>
