fix issue with refresh/update stock

--- a/dashboard/core/templates/stock/form.html
+++ b/dashboard/core/templates/stock/form.html
@@ -14,7 +14,7 @@
   Form
 {% endblock active_breadcrumb %}
 
-{% block container %}
+{% block active_container %}
     <h2>Stock Creation / Edition</h2>
     <form method="POST" class="form">
         {% csrf_token %}
