--- a/dashboard/core/templates/stock/index.html
+++ b/dashboard/core/templates/stock/index.html
@@ -97,6 +97,6 @@
           </tbody>
         </table>
         <button onclick="location.href='/stock/add'" type="submit" class="btn btn-primary">Create</button>
-        <button onclick="location.href='/stock/up'" type="button" class="btn btn-success">Refresh</button>
+        <button onclick="location.href='/stock/refresh'" type="button" class="btn btn-success">Refresh</button>
       </div>
 {% endblock active_container %}
